option java_package = "com.ava.bigdata.common.rpc.protobuf.proto";
option java_outer_classname = "MyResourceTracker";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "MyResourceTrackerMessage.proto";

service MyResourceTrackerService {
  rpc registerNodeManager(MyRegisterNodeManagerRequestProto) returns (MyRegisterNodeManagerResponseProto);
}